@@ -22,7 +22,7 @@ import mindustry.world.meta.BlockGroup;
 import static mindustry.Vars.*;
 
 public class Replicator extends PayloadBlock {
-    public float delay = 60f * 60f;
+    public int delay = 0, payloadTick;
 
     public Replicator(String name){
         super(name);
@@ -109,6 +109,7 @@ public class Replicator extends PayloadBlock {
                 deselect();
                 return;
             }
+
             ItemSelection.buildTable(Replicator.this, table,
                     content.units().select(Replicator.this::canProduce).as(),
                     () -> (UnlockableContent)config(), this::configure, selectionRows, selectionColumns);
@@ -124,7 +125,8 @@ public class Replicator extends PayloadBlock {
             super.updateTile();
             if (unlockedNowHost() && state.isCampaign()) return;
 
-            Time.run(delay, ()->{
+
+            if(payloadTick >= delay){
                 if(payload == null){
                     scl = 0f;
                     if(unit != null){
@@ -139,8 +141,10 @@ public class Replicator extends PayloadBlock {
                     }
                     payVector.setZero();
                     payRotation = rotdeg();
+                    payloadTick = 0;
                 }
-            });
+            } else {payloadTick++;}
+
             scl = Mathf.lerpDelta(scl, 1f, 0.1f);
 
             moveOutPayload();
